# api-personnal-assistant

./: README.md  pyproject.toml  requirements.txt  serve.py
src/: config.py  main.py  serve.py  test_main.py
