[tool.poetry]
name = "api-personnal-assistant"
version = "0.1.0"
description = ""
authors = ["Swann <swann.bouviermuller@gmail.com>"]
readme = "README.md"
packages = [{include = "api_personnal_assistant"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.0"
uvicorn = "^0.21.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
flake8 = "^6.0.0"
pylint = "^2.17.0"
pytest = "^7.2.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
